force-app/main/default/objects/GPTfy_Chatbot_Mapping__mdt/GPTfy_Chatbot_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>These mappings are used to contain the ID of GCP Dialog Flow Agents and Environment.</description>
    <label>GPTfy Chatbot Mapping</label>
    <pluralLabel>GPTfy Chatbot Mappings</pluralLabel>
</CustomObject>