force-app/main/default/objects/GPTfy_Chatbot_Mapping__mdt/fields/Agent_ID__c.field-meta.xml
<CustomField>
    <fullName>Agent_ID__c</fullName>
    <label>Agent ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>