force-app/main/default/objects/GPTfy_Chatbot_Mapping__mdt/fields/Environment_Id__c.field-meta.xml
<CustomField>
    <fullName>Environment_Id__c</fullName>
    <label>Environment Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>