force-app/main/default/objects/GPTfy_Chatbot_Mapping__mdt/fields/Messaging_Channel_Name__c.field-meta.xml
<CustomField>
    <fullName>Messaging_Channel_Name__c</fullName>
    <label>Messaging Channel Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>