force-app/main/default/objects/GPTfy_Chatbot_Mapping__mdt/fields/Project_ID__c.field-meta.xml
<CustomField>
    <fullName>Project_ID__c</fullName>
    <label>Project ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>